--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-permission": "^5.4",
-        "spatie/laravel-ray": "^1.26"
+        "laravellegends/pt-br-validator": "^8.0",
+        "spatie/laravel-permission": "^5.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
