Filament breezy, translate and update

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "filament/filament": "^2.5",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jeffgreco13/filament-breezy": "^1.0",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
