--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravellegends/pt-br-validator": "^8.0",
+        "shuvroroy/filament-spatie-laravel-backup": "^1.1",
         "spatie/laravel-permission": "^5.4"
     },
     "require-dev": {
