--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "barryvdh/laravel-debugbar": "^3.6",
         "bezhansalleh/filament-shield": "^1.0",
         "filament/filament": "^2.5",
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.5",
         "laravellegends/pt-br-validator": "^8.0",
         "shuvroroy/filament-spatie-laravel-backup": "^1.1",
+        "spatie/laravel-google-fonts": "^1.1",
         "spatie/laravel-permission": "^5.4"
     },
     "require-dev": {
