--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.0",
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "@tailwindcss/forms": "^0.5.6",
+        "@tailwindcss/typography": "^0.5.9",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.15",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "tailwindcss": "^3.0.0"
+        "postcss": "^8.4.6",
+        "tailwindcss": "^3.3.3",
+        "tippy.js": "^6.3.7",
+        "vite": "^4.0.0"
     }
 }
