--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,10 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "bezhansalleh/filament-shield": "^2.4.8",
         "filament/filament": "^2.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^9.19",
+        "laravel/sanctum": "^3.0",
+        "laravel/tinker": "^2.7",
         "laravellegends/pt-br-validator": "^9.1.0",
         "spatie/laravel-google-fonts": "^1.1",
         "spatie/laravel-permission": "^5.4"
@@ -24,7 +23,8 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.25",
+        "laravel/pint": "^1.0",
+        "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
